# django-drf-keycloak-auth-example-back-end

./: .env_template  .gitignore  README.md  main.py  manage.py  pyproject.toml  sitecustomize.py  sitecustomize_install.py
django_drf_keycloak_auth_example/: asgi.py  permissions.py  settings.py  urls.py  views.py  wsgi.py
django_drf_keycloak_auth_example/templates/: error.html  home.html
